src/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    name: postgres
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-demo
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgredb
        volumeMounts:
        - name: hostvolume
          mountPath: /db
          subPath: postgres
      volumes:
      - name: hostvolume
        hostPath:
          # directory location on host
          path: /tmp
  # volumeClaimTemplates:
  # - metadata:
  #     name: postgredb
  #   spec:
  #     accessModes: [ "ReadWriteOnce" ]
  #     storageClassName: gp2
  #     resources:
  #       requests:
  #         storage: 1Gi
